# tensor_on_c

./: CMakeLists.txt
c/: CMakeLists.txt  test.c
c/includes/tensor/: tensor.h
c/includes/tensor/kernel/: ndarray.h  pf_body.h  shape.h
c/includes/tensor/kernel/t32f/: t32f.h
c/includes/tensor/kernel/t32f/architecture/: t32f_generic.h
c/includes/tensor/kernel/t32f/ops/: t32f_ops.h
c/src/: main.cpp
c/src/tensor/: tensor.c
c/src/tensor/kernel/: ndarray.c  shape.c
c/src/tensor/kernel/t32f/: t32f.c
c/src/tensor/kernel/t32f/architecture/: t32f_generic.c
c/src/tensor/kernel/t32f/ops/: t32f_ops.c
includes/tensor/: shape copy.h  tensor.h
includes/tensor/ndarray/: ndFloat32.h  ndarray.h
src/: main.cpp
src/tensor/: tensor.cpp
src/tensor/ndarray/: ndarray.c
src/tensor/ndarray/architecture/generic/: ndFloat32_generic.c
